--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="wrapper bg-hanning">
+	<div class="hanning-recruitment-box text-center">
+		<%= image_tag "Hanning_Recruitment_logo.png", alt: "Hanning Recruitment – Real Estate Recruitment", class: "fadeIn" %>
+		<p class="phone"><a href="tel:+44-78-708-3256">+44 (0)7870 813256</a></p>
+		<p class="email"><%= link_to "info@hanningrecruitment.com", "mailto:info@hanningrecruitment.com"%></p>
+	</div>
+</div>
