--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
 <div class="wrapper bg-hanning">
 	<div class="hanning-recruitment-box text-center">
 		<%= image_tag "Hanning_Recruitment_logo.png", alt: "Hanning Recruitment – Real Estate Recruitment", class: "fadeIn" %>
-		<p class="phone fadeIn"><a href="tel:+44-787-081-3256">+44 (0)7870 813256</a></p>
+		<p class="fadeIn">17 Clifford Street<br>Mayfair<br>London<br>W1S 3RQ</p>
+		<br>
+		<p class="phone fadeIn"><a href="tel:+44-203-034-0099">+44 (0)203 0340099</a></p>
+		<p class="phone fadeIn"><a href="tel:+44-753-525-5726">+44 (0)7535 255726</a></p>
 		<p class="email fadeIn"><%= link_to "info@hanningrecruitment.com", "mailto:info@hanningrecruitment.com"%></p>
 	</div>
 </div>
+
+
